--- a/src/components/family/Family.css
+++ b/src/components/family/Family.css
@@ -157,12 +157,14 @@ footer .btn { margin: 0.6rem 0; }
         font-size: 18px;
   }
   .family-heading span{
-     padding: 0 8px;
-      font-size: 24px;
-      line-height: 1.6;
+    padding: 0 15px;
+    font-size: 24px;
+    line-height: 1.6;
+    margin-left: -30px;
+    margin-top: 10px;
   }
   .process{
-    margin: 0 auto;
+    margin: 5px auto;
     padding: 0 10px;
   }
 }
