--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -88,7 +88,7 @@ body {
   color: #fff;
   display: inline-block;
   font-size: 24px;
-  padding: 0 40px;
+  padding: 10px 40px;
   border-radius: 15px;
   margin-top: 30px;
   margin-left: 60px;
@@ -878,6 +878,7 @@ body {
   justify-content: space-between;
   flex-wrap: wrap;
   gap: 30px;
+  padding: 20px;
 }
 
 .img-fluid {
