--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -70,7 +70,7 @@ body {
   display: block;
   font-size: 18px;
   margin-bottom: 4px;
-  padding: 10px 0 20px;
+  padding: 10px 0;
 }
 
 /* ========== FORM SECTION ========== */
@@ -157,6 +157,21 @@ input[type=number]::-webkit-outer-spin-button {
 .send-btn:hover {
   background-color: #ff704d;
   box-shadow: 0 0 20px rgba(255, 92, 51, 1);
+}
+
+/* ========Launching  ======== */
+
+.launching img{
+  width: 250px;
+  height: auto;
+  object-fit: contain;
+  box-shadow: none !important;
+  border-radius: 0px !important
+}
+
+.launching img:hover{
+  transform: scale(1.06);
+  cursor: default;
 }
 
 /* ========== FOOTER ========== */
