--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -601,7 +601,7 @@ body {
   border-top: 1px solid #e0e0e0;
   transition: transform 0.3s ease;
   border-radius: 20px;
-  object-fit: fill;
+  object-fit: cover;
 }
 
 .solution-card-img1 {
